Add nix-build to GHA and pin go version to 1.18 in default.nix
We have to pin it to 1.18 otherwise vendorSha256 will be different
if we try to build it with e.g. go 1.16 (go mod tidy also produces
different results).

--- a/.github/workflows/Go.yaml
+++ b/.github/workflows/Go.yaml
@@ -11,7 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.4.0
+    - uses: cachix/install-nix-action@v17
+      with:
+        nix_path: nixpkgs=channel:nixos-22.05
 
     - name: Set up Go
       uses: actions/setup-go@v2
@@ -23,3 +26,6 @@ jobs:
 
     - name: Test
       run: go test --tags=integration -v ./...
+
+    - name: Build Nix Package
+      run: nix-build -E "with import <nixpkgs> {}; callPackage ./default.nix {}" --no-out-link
